--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HaiTV - STEAMING NOW!</title>
     <link rel="icon" href="https://i.ibb.co/wrs2F1WD/Picsart-25-11-20-16-28-11-712.png" type="image/png">
+    <link rel="manifest" href="/manifest.json">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Shaka Player CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.12/controls.css">
